WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275916
Unreviewed, do not use ScratchRegisterAllocator for Getter / Setter since unwinding will skip restore
https://bugs.webkit.org/show_bug.cgi?id=275916
Summary
Unreviewed, do not use ScratchRegisterAllocator for Getter / Setter since unw...
Yusuke Suzuki
Reported
2024-06-26 14:00:54 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-26 14:01:18 PDT
<
rdar://problem/130620397
>
Yusuke Suzuki
Comment 2
2024-06-26 14:02:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30202
EWS
Comment 3
2024-06-26 14:05:09 PDT
Committed
280390@main
(bbfee9d73936): <
https://commits.webkit.org/280390@main
> Reviewed commits have been landed. Closing PR #30202 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug