Unreviewed, do not use ScratchRegisterAllocator for Getter / Setter since unwinding will skip restore https://bugs.webkit.org/show_bug.cgi?id=275916 rdar://130620397

* Source/JavaScriptCore/bytecode/InlineCacheCompiler.cpp:
(JSC::getterHandlerImpl):
(JSC::getByIdGetterHandler):
(JSC::setterHandlerImpl):
(JSC::putByIdSetterHandlerImpl):
(JSC::getByValGetterHandlerImpl):
(JSC::putByValSetterHandlerImpl):

Canonical link: https://commits.webkit.org/280390@main